--- a/views/baskets.ejs
+++ b/views/baskets.ejs
@@ -86,15 +86,16 @@
     <div class="container">
         <h1>Basket</h1>
         <div class="basket-list">
-            <% baskets.forEach(product => { %>
+            <% baskets.forEach(basket => { %>
                 <div class="card">
-                    <h3><%= product.name %></h3>
-                    <p>Description: <%= product.description %></p>
-                    <p>Stock: <%= product.stock %></p>
-                    <p>Category: <%= product.category %></p>
-                    <p>Price: $<%= product.price %></p>
-                    <img src="<%= product.imageUrl %>" alt="<%= product.name %> Image">
-                    <button class="delete-button" onclick="removeFromBasket('<%= product.id %>')">Remove</button>
+                    <h3><%= basket.name %></h3>
+                    <p>Description: <%= basket.description %></p>
+                    <p>Stock: <%= basket.stock %></p>
+                    <p>Category: <%= basket.category %></p>
+                    <p>Price: $<%= basket.price %></p>
+                    <p>Quantity: <%= basket.quantity %></p>
+                    <img src="<%= basket.imageUrl %>" alt="<%= basket.name %> Image">
+                    <button class="delete-button" onclick="removeFromBasket('<%= basket.basketId %>')">Remove</button>
                 </div>
             <% }) %>
         </div>
@@ -104,12 +105,12 @@
         const removeFromBasket = async (id) => {
             const response = await fetch(`/baskets/${id}`, {
                 method: "DELETE"
-            })
+            });
 
             if (response.ok) {
-                window.location.reload()
+                window.location.reload();
             } else {
-                alert('Failed to remove product from basket')
+                alert('Failed to remove product from basket');
             }
         }
     </script>
