--- a/views/index.ejs
+++ b/views/index.ejs
@@ -137,7 +137,7 @@
             <h1>Welcome to Retro Movie Merchandise</h1>
         </div>
         <div class="section">
-            <h2>Featured Products</h2>
+            <h2>Featured Movies</h2>
             <div class="card">
                 <img src="https://s3.amazonaws.com/nightjarprod/content/uploads/sites/4/2018/07/09170404/breakfastclub_poster.jpg" alt="...">
                 <h3>The Breakfast Club</h3>
@@ -152,6 +152,102 @@
                 <img src="https://images.moviesanywhere.com/34f4f25b50973b8fe2b197c8a8a6e3a5/1a9ea9c0-fb38-439b-977e-40b6fe52a006.jpg" alt="...">
                 <h3>E.T.</h3>
                 <p>Accepting others who are different.</p>
+            </div>
+            <div class="card">
+                <img src="https://m.media-amazon.com/images/M/MV5BYmU1NDRjNDgtMzhiMi00NjZmLTg5NGItZDNiZjU5NTU4OTE0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_FMjpg_UX1000_.jpg" alt="The Empire Strikes Back">
+                <h3>The Empire Strikes Back</h3>
+                <p>The battle between the Empire and the Rebel Alliance continues.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://musicart.xboxlive.com/7/71325100-0000-0000-0000-000000000002/504/image.jpg?w=1920&h=1080" alt="Return of the Jedi">
+                <h3>Return of the Jedi</h3>
+                <p>The final battle to defeat the Galactic Empire.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://lumiere-a.akamaihd.net/v1/images/phantom-menace-ferguson-onesheet-withacolyte_594ea745.jpeg?region=0,0,731,1080" alt="Star Wars: Episode I – The Phantom Menace">
+                <h3>Star Wars: Episode I – The Phantom Menace</h3>
+                <p>The beginning of the Star Wars saga, introducing young Anakin Skywalker.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/3/32/Star_Wars_-_Episode_II_Attack_of_the_Clones_%28movie_poster%29.jpg" alt="Star Wars: Episode II – Attack of the Clones">
+                <h3>Star Wars: Episode II – Attack of the Clones</h3>
+                <p>The Republic faces the threat of the Separatists.</p>
+            </div>
+            
+
+
+            <div class="card">
+                <img src="https://m.media-amazon.com/images/I/61wNEQf481L._AC_UF894,1000_QL80_.jpg" alt="The Goonies">
+                <h3>The Goonies</h3>
+                <p>Adventure and friendship in the quest for pirate treasure.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://www.sonypictures.com/sites/default/files/styles/max_560x840/public/title-key-art/ghostbusters_onesheet_1400x2100.png?itok=o0LT09zD" alt="Ghostbusters">
+                <h3>Ghostbusters</h3>
+                <p>Who you gonna call? Ghostbusters!</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://www.tallengestore.com/cdn/shop/products/JurassicPark-StevenSpielberg-HollywoodMovieHandDrawnPoster_b1f42feb-1257-4239-90dd-e9a8f501f14f.jpg?v=1648215348" alt="Jurassic Park">
+                <h3>Jurassic Park</h3>
+                <p>A thrilling adventure of humans coexisting with dinosaurs.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://ridgefieldplayhouse.org/wp-content/uploads/2022/06/RPH-DIRTY-DANCING-550x800-2.png" alt="Dirty Dancing">
+                <h3>Dirty Dancing</h3>
+                <p>Nobody puts Baby in a corner.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://hcgart.com/cdn/shop/products/RobertBrunoSavingPriv.png?v=1571606661" alt="Saving Private Ryan">
+                <h3>Saving Private Ryan</h3>
+                <p>A powerful tale of courage and sacrifice in World War II.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://m.media-amazon.com/images/I/81x1-7zDMsL._AC_UF1000,1000_QL80_.jpg">
+                <h3>The Lion King</h3>
+                <p>An epic tale of destiny and the circle of life.</p>
+            </div>
+            <div class="card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/8/86/The_Silence_of_the_Lambs_poster.jpg" alt="The Silence of the Lambs">
+                <h3>The Silence of the Lambs</h3>
+                <p>A chilling psychological thriller with Hannibal Lecter.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://musicart.xboxlive.com/7/6b221200-0000-0000-0000-000000000002/504/image.jpg?w=1920&h=1080" alt="Indiana Jones and the Last Crusade">
+                <h3>Indiana Jones and the Last Crusade</h3>
+                <p>Indy's adventure to find the Holy Grail.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://www.sonypictures.com/sites/default/files/styles/max_560x840/public/title-key-art/Jumanji_onesheet_rating_1.jpg?itok=Y0PEK8IA" alt="Jumanji">
+                <h3>Jumanji</h3>
+                <p>A magical board game unleashes wild adventures.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://m.media-amazon.com/images/M/MV5BNWIwODRlZTUtY2U3ZS00Yzg1LWJhNzYtMmZiYmEyNmU1NjMzXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg" alt="Forrest Gump">
+                <h3>Forrest Gump</h3>
+                <p>Life is like a box of chocolates...</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://m.media-amazon.com/images/M/MV5BZmUzNjYzZDEtMWQ1Ny00OGIxLTk4MTktMzU5NTZmZjk5MTQyXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_QL75_UY281_CR0,0,190,281_.jpg" alt="Star Trek V: The Final Frontier">
+                <h3>Star Trek V: The Final Frontier</h3>
+                <p>The crew's quest for the ultimate knowledge.</p>
+            </div>
+            
+            <div class="card">
+                <img src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg">
+                <h3>Home Alone</h3>
+                <p>A young boy defends his home from burglars.</p>
             </div>
 
         <div class="section">
