register and login pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,21 +116,25 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="/">Home</a>
-        <a href="/products">Products</a>
-        <a href="/favorites">Favorites</a>
-        <a href="/basket">Basket</a>
-        <% if (user) { %>
-            <a href="/users/profile">Profile</a>
-            <a href="/users/logout">Logout</a>
-            <% if (user.username === 'admin') { %>
-                <a href="/admin">Admin</a>
-                <a href="/users">Users</a>
+        <a href="/" style="color: #FCCC13; text-decoration: none;">
+            <h1 style="color: inherit;">Retro Movie Merchandise</h1>
+        </a>
+        <ul>
+            <li><a href="/products">Products</a></li>
+            <% if (user) { %>
+                <li><a href="/favorites">Favorites</a></li>
+                <li><a href="/basket">Basket</a></li>
+                <li><a href="/users/profile">Profile</a></li>
+                <li><a href="/users/logout">Logout</a></li>
+                <% if (user.username === 'admin') { %>
+                    <li><a href="/admin">Admin</a></li>
+                    <li><a href="/users">Users</a></li>
+                <% } %>
+            <% } else { %>
+                <li><a href="/users/login">Login</a></li>
+                <li><a href="/users/register">Register</a></li>
             <% } %>
-        <% } else { %>
-            <a href="/users/login">Login</a>
-            <a href="/users/register">Register</a>
-        <% } %>
+        </ul>
     </nav>
     <div class="container">
         <div class="hero">
